Builder updates, fixes and enhancements